--- a/Spring boot essentials/pom.xml
+++ b/Spring boot essentials/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.spring.boot</groupId>
-	<artifactId>Spring boot essentials</artifactId>
+	<artifactId>spring.boot.essentials</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
